# wetransform_udemy

./: .gitignore  ContextDiagram.md  Spec.md  UsecaseDiagram.md
source/backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  dev.db  docker-compose.yml  dummy_import.csv  pyproject.toml  requirements.txt  test_api.py
source/backend/alembic/: env.py
source/backend/alembic/versions/: 56288113140d_add_remaining_models.py  88e362e306f0_add_data_import_and_udemy_connection.py  96939e361599_fix_timestamp_defaults.py  dfdbf684e4b5_init_models.py  f316ad330d8e_init_db.py
source/backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  seeder.py  worker.py
source/backend/app/agents/analyst/: agent.py  nodes.py  prompts.py
source/backend/app/agents/tools/: analytics_tools.py
source/backend/app/models/: __init__.py  activity.py  ai_intervention.py  course.py  import_data.py  teacher.py
source/backend/app/shared/: audit.py  cache.py  constants.py  email.py  encryption.py  error_codes.py  exceptions.py  i18n.py  logger.py  middleware.py  observability.py  rate_limit.py  response.py  security.py  storage.py
source/backend/locales/: en.json  vi.json
source/backend/scripts/: backup_db.sh
source/backend/tests/: conftest.py  test_analytics_services.py  test_cache_service.py  test_data_source.py  test_e2e_flow.py  test_encryption.py  test_health.py
source/backend/tests/test_agents/: test_analyst_agent.py  test_insight_workflow.py
source/backend/uploads/data_imports/: ccb6511a-b4a6-421f-9089-a7296958e09e.csv
(+145 files in other folders)
